[package]
name = "_3macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dev-dependencies]
anyhow = "1.0.94"
futures = "0.3.31"
tokio = {version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"]}

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = { version = "2.0.90", features = ["extra-traits"] }
